--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div class="alert alert-warning" role="alert">Realsmart Theme is currently offline.</div>
 
 		<h2>ICT IGCSE (0417) Past Papers</h2>
+		<p>More coming soon!</p>
 		<h3>Web Authoring</h3>
 		<h4>Paper 1</h4>
 		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Questions</a><br>
