--- a/index.html
+++ b/index.html
@@ -9,47 +9,7 @@
 	<meta name="description" content="ICT IGCSE Past Papers">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<style>
-		body {
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-		}
-
-		.container {
-			width: 70%;
-			margin: 0 auto;
-			margin-top: 2em;
-		}
-
-		.alert {
-			background-color: #fff9e6;
-			border: 1px solid #f0cf64;
-			padding: 1em;
-			border-radius: 10px;
-			color: #856910;
-		}
-
-		h1, h4 {
-			font-weight: 600;
-		}
-
-		h2, h3 {
-			font-weight: 500;
-		}
-
-		h1, h2, h3, h4 {
-			margin: 0.6em 0;
-		}
-
-		.list-group-item {
-			display: block;
-		}
-
-		small {
-			color: #3b3b3b;
-		}
-	</style>
-
-	<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
