Remove useless message, add useless message

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 	<div class="container">
 		<div class="page-header">
-			<h1>Welcome to infra.link! <small>This website is a work in progress</small></h1>
+			<h1>Welcome to infra.link!</h1>
 		</div>
 
-		<div class="alert alert-warning" role="alert">Realsmart Theme is currently offline.</div>
+		<p>This site doesn't have much content on it. Maybe it will someday.</p>
 
 		<h2>ICT IGCSE (0417) Past Papers</h2>
 		<p>More coming soon!</p>
