Remove ancient past papers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>ICT IGCSE Past Papers</title>
-	<meta name="description" content="ICT IGCSE Past Papers">
+	<title>infra.link</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,19 +18,7 @@
 		</div>
 
 		<p>This site doesn't have much content on it. Maybe it will someday.</p>
-
-		<h2>ICT IGCSE (0417) Past Papers</h2>
-		<p>More coming soon!</p>
-		<h3>Web Authoring</h3>
-		<h4>Paper 1</h4>
-		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Questions</a><br>
-		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Mark Scheme</a><br>
-		<h4>Paper 2</h4>
-		<a href="https://drive.google.com/open?id=0BzKXGVLBLtZhZ0xlQzhmT2ZTQ2c&authuser=0">Tutorials (secure link)</a><br>
-		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Questions</a><br>
-		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Files for Task</a><br>
-		<a href="http://www.cie.org.uk/programmes-and-qualifications/cambridge-igcse-information-and-communication-technology-0417/past-papers/">Mark Scheme</a><br><br>
-
+		
 		<h2>Bookmarklets</h2>
 		<p>Drag these to your bookmarks bar (<kbd><kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>B</kbd></kbd> on Chrome) to use them.</p>
 		<div class="list-group">
